--- a/src/pages/LoginPage/Login.css
+++ b/src/pages/LoginPage/Login.css
@@ -1,62 +1,136 @@
-
 body::-webkit-scrollbar {
     display: none; /* for Chrome, Safari, and Opera */
 }
 
 .login-container {
-    width: 100%;
-    height: 100vh;
-    background-color: #E8F3FF;
-    padding: 0px;
-    margin: 0;
-}
-
-.form-container {
-    width: 40rem;
-    background-color: white;
-    border-radius: 20px;
-    box-shadow: 0px 5px 50px #0D3769;
-    position: absolute;
-    left: 0;
-    right: 0;
-    margin: auto;
-    margin-top: 15vh;
+    display: flex;
     text-align: center;
+    justify-content: center;
+    height: 90vh;
+    min-height: 650px;
+
 }
 
-.form-container h1 {
+.login-title {
+    width: 100%;
+    text-align: center;
     margin: 30px 0px;
+    color: white;
     font-weight: bold;
-    color: #0D3769;
+    font-size: 40px;
 }
 
 .login-form {
-    text-align: right;
-    padding-right: 30%;
-    color: #0D3769;
+    display: flex;
+    flex-direction: column;
+    margin-top: 20vh;
+    background-color: white;
+    border-radius: 50px;
+    width: 500px;
+    text-align: left;
+    padding: 0px 130px;
+    height: 335px;
+    background-color: #65CCB8;
+    animation-name: popIn;
+    animation-duration: 0.4s;
 }
 
-.login-form input{
-    width: 250px;
-    margin-left: 50px;
-    margin-bottom: 20px;
-    color:#0D3769;
+@keyframes popIn {
+    0% {transform: scale(0)}
+    60% {transform: scale(1.2)}
+    100% {transform: scale(1)}
+}
+
+.login-form input {
+    border: white;
+}
+
+.login-form #text {
+    border-radius: 50px;
+    padding: 3px 10px;
+}
+
+.login-form input[type=file]::file-selector-button {
+    background-color: white;
+    border: None;
+    border-radius: 50px;
+    font-size: 15px;
+    width: 100px;
+    height: 30px;
+    margin-right: 20px;
+    font-weight: 700;
+    color: #65CCB8;
+    cursor: pointer;
+}
+
+.login-form input[type=file] {
+    color: white;
+    font-size: 16px;
     font-weight: bold;
 }
 
-.login-form label {
-    font-size: 20px;
-    color: #0D3769;
+.login-form input:focus {
+    outline: none !important;
 }
 
 .login-form #submit {
-    width: 120px;
-    margin-right: 70px;
-    border-radius: 20px;
+    margin-top: 10px;
+    background-color: white;
+    height: 50px;
+    border-radius: 50px;
+    color: #65CCB8;
     font-size: 25px;
-    background-color: #0D3769;
+    font-weight: bold;
+    transition: 0.4s;
+    width: 130px;
+}
+
+.login-form #submit:hover {
+    transition: 0.4s;
+    transform: scale(1.2)
+}
+
+.button-wrap {
+    width: 100%;
+    text-align: center;
+}
+
+.result-box {
+    display: flex;
+    flex-direction: column;
+    margin-top: 25vh;
+    gap: 0px;
+    background-color: white;
+    border-radius: 50px;
+    width: 500px;
+    text-align: left;
+    padding: 0px 10px;
+    height: 255px;
+    background-color: #65CCB8;
+}
+
+.result-box h1 {
+    width: 100%;
+    text-align: center;
     color: white;
     font-weight: bold;
-    margin-top: 15px;
-    margin-bottom: 35px;
+    font-size: 55px;
+    margin-top: 40px;
 }
+
+.animation {
+    height: 100px;
+    margin: 0;
+    padding: 0;
+    animation-name: popIn;
+    animation-duration: 1s;
+}
+
+@media only screen and (max-width: 600px) {
+    .login-form {
+        width: 300px;
+        padding: 0px 50px;
+        transition: 0.5s;
+    }
+}
+
