--- a/src/pages/RegisterPage/Register.css
+++ b/src/pages/RegisterPage/Register.css
@@ -1,92 +1,144 @@
-
 body::-webkit-scrollbar {
     display: none; /* for Chrome, Safari, and Opera */
 }
 
 .register-container {
-    width: 100%;
-    height: 100vh;
-    min-height: 650px;
-    background-color: #E8F3FF;
-    padding: 0px;
-    margin: 0;
-}
-
-.form-container {
-    width: 40rem;
-    background-color: white;
-    border-radius: 20px;
-    box-shadow: 0px 5px 50px #0D3769;
-    margin: auto;
-    margin-top: 15vh;
+    display: flex;
     text-align: center;
-    transition: 0.5s;
+    justify-content: center;
+    height: 90vh;
+    min-height: 650px;
+
 }
 
-.form-container h1 {
+.register-title {
+    width: 100%;
+    text-align: center;
     margin: 30px 0px;
+    color: white;
     font-weight: bold;
     font-size: 40px;
-    color: #0D3769;
 }
 
 .register-form {
     display: flex;
     flex-direction: column;
-    text-align: center;
-    align-items: center;
-    color: #0D3769;
+    margin-top: 20vh;
+    background-color: white;
+    border-radius: 50px;
+    width: 500px;
+    text-align: left;
+    padding: 0px 130px;
+    height: 405px;
+    background-color: #65CCB8;
+    animation-name: popIn;
+    animation-duration: 0.4s;
+}
+
+@keyframes popIn {
+    0% {transform: scale(0)}
+    60% {transform: scale(1.2)}
+    100% {transform: scale(1)}
 }
 
 .register-form input {
-    width: 300px;
-    height: 40px;
-    margin-bottom: 20px;
-    color:#0D3769;
-    font-weight: bold;
+    border: white;
+}
+
+.register-form #text {
+    border-radius: 50px;
+    padding: 3px 10px;
+}
+
+.register-form input[type=file]::file-selector-button {
+    background-color: white;
+    border: None;
+    border-radius: 50px;
     font-size: 15px;
-    border-radius: 10px;
-    padding: 0px 10px;
-    border: 2px solid #0D3769;
-    transition: 0.5s;
+    width: 100px;
+    height: 30px;
+    margin-right: 20px;
+    font-weight: 700;
+    color: #65CCB8;
+    cursor: pointer;
+}
+
+.register-form input[type=file] {
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
 }
 
 .register-form input:focus {
-    background-color: #E8F3FF;
+    outline: none !important;
 }
 
-.register-form label {
-    font-size: 20px;
-    color: #0D3769;
+#matching-error {
+    font-weight: bold;
+    color: red;
+    width: 100%;
+    text-align: center;
+    font-size: 15px;
+    text-shadow: 0px 0px 5px black;
 }
 
 .register-form #submit {
-    width: 120px;
-    border-radius: 20px;
+    margin-top: 10px;
+    background-color: white;
+    height: 50px;
+    border-radius: 50px;
+    color: #65CCB8;
     font-size: 25px;
-    background-color: #0D3769;
-    color: white;
     font-weight: bold;
-    padding: 0;
-    margin-bottom: 40px;
+    transition: 0.4s;
+    width: 130px;
 }
 
-@media screen and (max-width: 650px){
-    .form-container {
-        width: 25rem;
-        transition: 0.5s;
-    }
+.register-form #submit:hover {
+    transition: 0.4s;
+    transform: scale(1.2)
+}
 
-    .register-form input {
-        width: 250px;
-        height: 40px;
-        margin-bottom: 20px;
-        color:#0D3769;
-        font-weight: bold;
-        font-size: 15px;
-        border-radius: 10px;
-        padding: 0px 10px;
-        border: 2px solid #0D3769;
+.button-wrap {
+    width: 100%;
+    text-align: center;
+}
+
+.result-box {
+    display: flex;
+    flex-direction: column;
+    margin-top: 25vh;
+    gap: 0px;
+    background-color: white;
+    border-radius: 50px;
+    width: 500px;
+    text-align: left;
+    padding: 0px 10px;
+    height: 255px;
+    background-color: #65CCB8;
+}
+
+.result-box h1 {
+    width: 100%;
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    font-size: 55px;
+    margin-top: 40px;
+}
+
+.animation {
+    height: 100px;
+    margin: 0;
+    padding: 0;
+    animation-name: popIn;
+    animation-duration: 1s;
+}
+
+@media only screen and (max-width: 600px) {
+    .register-form {
+        width: 300px;
+        padding: 0px 50px;
         transition: 0.5s;
     }
 }
