--- a/src/components/QuoteBox.css
+++ b/src/components/QuoteBox.css
@@ -1,11 +1,26 @@
-.quote-container{
+.quote-container {
     background: white;
-    height: 260px;
     width: 50%;
     min-width: 700px;
     border-radius: 20px;
     padding: 15px 25px 25px 25px;
     box-shadow: 5px 5px 15px gray;
+    animation: popInBox;
+    animation-duration: 0.4s;
+}
+
+@keyframes popInBox {
+    0% {
+        transform: scale(0)
+    }
+
+    60% {
+        transform: scale(1.05)
+    }
+
+    100% {
+        transform: scale(1)
+    }
 }
 
 .name {
@@ -17,14 +32,10 @@
 .quote {
     font-size: 18px;
     overflow: scroll;
-    height: 140px;
+    max-height: 140px;
     padding-left: 35px;
     padding-right: 35px;
-    margin: 0px;
-    /* align-items: center;
-    justify-content: center;
-    align-content: center;
-    vertical-align: center; */
+    margin: 20px 0px;
 }
 
 .quote::-webkit-scrollbar {
