--- a/src/pages/HomePage/Home.css
+++ b/src/pages/HomePage/Home.css
@@ -1,6 +1,7 @@
 .home-container {
-    background : #E8F4F8;
+    background: #E8F4F8;
     padding-bottom: 100px;
+    min-height: calc(100vh - 90px)
 }
 
 .quote-boxes {
@@ -9,4 +10,5 @@
     gap: 25px;
     align-items: center;
     justify-content: center;
+    padding-top: 75px;
 }
