--- a/src/components/QuoteBox.css
+++ b/src/components/QuoteBox.css
@@ -3,10 +3,10 @@
     width: 50%;
     min-width: 700px;
     border-radius: 20px;
-    padding: 15px 25px 25px 25px;
+    padding: 15px 25px 10px 25px;
     box-shadow: 5px 5px 15px gray;
-    animation: popInBox;
-    animation-duration: 0.4s;
+    /* animation: popInBox;
+    animation-duration: 0.4s; */
 }
 
 @keyframes popInBox {
@@ -58,4 +58,30 @@
 .book-author {
     font-style: italic;
     font-size: 15px;
+}
+
+.show-to-public-checkbox {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 5px;
+}
+
+.show-to-public-checkbox p {
+    margin: 0;
+    padding: 0;
+}
+
+@media only screen and (max-width: 600px) {
+    .quote-container {
+        min-width: 300px;
+    }
+
+    .book-info p {
+        font-size: 15px;
+    }
+
+    .book-author {
+        font-size: 10px;
+    }
 }
