--- a/src/components/QuoteBox.css
+++ b/src/components/QuoteBox.css
@@ -5,8 +5,8 @@
     border-radius: 20px;
     padding: 15px 25px 10px 25px;
     box-shadow: 5px 5px 15px gray;
-    /* animation: popInBox;
-    animation-duration: 0.4s; */
+    animation: popInBox;
+    animation-duration: 0.4s;
 }
 
 @keyframes popInBox {
@@ -70,6 +70,11 @@
 .show-to-public-checkbox p {
     margin: 0;
     padding: 0;
+}
+
+.public-checkbox {
+    width: 15px;
+    height: 15px;
 }
 
 @media only screen and (max-width: 600px) {
